--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>Arnolfini's Apalling Art</h1>
+        <h1>Arnolfini's Appalling Art</h1>
         <h4>Image Gallery</h4>
         <h6>by Craig Arnolfini</h6>
     </header>
